--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 
     <script src="gifjsLib/gif.js"></script>
     </head>
-<body id="body">
+<body id="body" style="color:black">
     <div style="display: inline-block;">
 
                     <canvas id="screen" width="500" height="500"
