modularize code using es6 modules

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     </div><br>
 
     <br>
-    <script src="forts.js"></script>
+    <script src="forts.js" type = "module"></script>
 </body>
 
 </html>
