Update to include commented online functionality in session class

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 
     <script src="gifjsLib/gif.js"></script>
     </head>
-<body id="body" style="color:black">
+<body id="body" style="color:black; overflow: hidden; ">
     <div style="display: inline-block;">
 
                     <canvas id="screen" width="500" height="500"
@@ -19,7 +19,7 @@
     </div><br>
 
     <br>
-    <script src="forts.js" type = "module"></script>
+    <script src="forts.js" type="module"></script>
 </body>
 
 </html>
